[gd_scene load_steps=30 format=3 uid="uid://c3uxi2otj1bmh"]

[ext_resource type="Texture2D" uid="uid://cc2hdp2665m7x" path="res://assets/sprite-sheets/agent/jett-idle.png" id="1_6kjts"]
[ext_resource type="Script" uid="uid://brs5iwj2jt6kp" path="res://scripts/characters/bots/bot.gd" id="1_lpid7"]
[ext_resource type="Texture2D" uid="uid://m8gpcaeqjpoe" path="res://assets/sprite-sheets/weapon/classic-pistol-spritesheet.png" id="2_w48k4"]
[ext_resource type="Texture2D" uid="uid://dhojxjcsrhdl4" path="res://assets/sprite-sheets/agent/jett-run.png" id="3_14icj"]
[ext_resource type="PackedScene" uid="uid://epcntget2aml" path="res://scenes/hud/health_bar.tscn" id="3_k0g3p"]
[ext_resource type="Script" uid="uid://bod3xtebyjah8" path="res://scripts/state_machine/bot_state_machine/bot_state_machine.gd" id="4_i28y5"]
[ext_resource type="Script" uid="uid://d0cgu7y17c3i0" path="res://scripts/state_machine/bot_state_machine/states/wander.gd" id="5_tbkid"]
[ext_resource type="Script" uid="uid://qv0aq6p1rxas" path="res://scripts/state_machine/bot_state_machine/states/follow.gd" id="7_sqh05"]
[ext_resource type="Script" uid="uid://dw30mmtd4bxpd" path="res://scripts/state_machine/bot_state_machine/states/attack.gd" id="9_7w486"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7w486"]
atlas = ExtResource("2_w48k4")
region = Rect2(102, 19, 51, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_536ug"]
atlas = ExtResource("2_w48k4")
region = Rect2(0, 0, 51, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_um03s"]
atlas = ExtResource("2_w48k4")
region = Rect2(51, 0, 51, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhj4y"]
atlas = ExtResource("2_w48k4")
region = Rect2(102, 0, 51, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_onhyu"]
atlas = ExtResource("2_w48k4")
region = Rect2(0, 19, 51, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6fc2"]
atlas = ExtResource("2_w48k4")
region = Rect2(51, 19, 51, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_4uq5g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w486")
}],
"loop": false,
"name": &"bot_weapon_default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_536ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um03s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhj4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onhyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6fc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w486")
}],
"loop": false,
"name": &"bot_weapon_fire",
"speed": 24.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7m8a5"]
atlas = ExtResource("1_6kjts")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ft72"]
atlas = ExtResource("1_6kjts")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehouy"]
atlas = ExtResource("1_6kjts")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk6xr"]
atlas = ExtResource("3_14icj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0sao"]
atlas = ExtResource("3_14icj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc256"]
atlas = ExtResource("3_14icj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc4c7"]
atlas = ExtResource("3_14icj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohcmf"]
atlas = ExtResource("3_14icj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo6yy"]
atlas = ExtResource("3_14icj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uympw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m8a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ft72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehouy")
}],
"loop": true,
"name": &"bot_idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk6xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0sao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc256")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc4c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohcmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo6yy")
}],
"loop": true,
"name": &"bot_run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yces8"]
radius = 7.35227
height = 27.6463

[sub_resource type="CircleShape2D" id="CircleShape2D_d02a6"]
radius = 296.009

[sub_resource type="CircleShape2D" id="CircleShape2D_jmq8t"]
radius = 141.014

[node name="bot" type="CharacterBody2D" node_paths=PackedStringArray("bot_state_machine", "health_bar")]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_lpid7")
bot_state_machine = NodePath("bot_state_machine")
health_bar = NodePath("health_bar")

[node name="weapon_pivot" type="Marker2D" parent="."]
position = Vector2(0, -14)
rotation = 0.00270854

[node name="weapon_sprite" type="AnimatedSprite2D" parent="weapon_pivot"]
position = Vector2(27, -2)
sprite_frames = SubResource("SpriteFrames_4uq5g")
animation = &"bot_weapon_default"

[node name="shooting_point" type="Marker2D" parent="weapon_pivot/weapon_sprite"]
position = Vector2(-0.00551577, -0.0731236)

[node name="animated_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_uympw")
animation = &"bot_run"
autoplay = "bot_idle"

[node name="body_collision_shape" type="CollisionShape2D" parent="."]
position = Vector2(-0.10511, -13.7387)
shape = SubResource("CapsuleShape2D_yces8")

[node name="bot_follow_range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="follow_range_collision_shape" type="CollisionShape2D" parent="bot_follow_range"]
position = Vector2(0, -13.7387)
shape = SubResource("CircleShape2D_d02a6")
debug_color = Color(0.239588, 0.620691, 0.412104, 0.42)

[node name="bot_attack_range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="attack_range_collision_shape" type="CollisionShape2D" parent="bot_attack_range"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_jmq8t")
debug_color = Color(0.827459, 0.373972, 0.353414, 0.42)

[node name="attack_interval" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="health_bar" parent="." instance=ExtResource("3_k0g3p")]
offset_left = -6.431
offset_top = -32.9816
offset_right = 248.569
offset_bottom = -5.9816
scale = Vector2(0.0511198, 0.0582721)
metadata/_edit_use_anchors_ = true

[node name="bot_state_machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_i28y5")
initial_state = NodePath("wander")

[node name="wander" type="Node" parent="bot_state_machine"]
script = ExtResource("5_tbkid")
animation_name = "bot_idle"
move_speed = 20.0

[node name="follow" type="Node" parent="bot_state_machine"]
script = ExtResource("7_sqh05")
animation_name = "bot_run"
move_speed = 40.0

[node name="attack" type="Node" parent="bot_state_machine" node_paths=PackedStringArray("shooting_point", "weapon_pivot", "weapon_sprite")]
script = ExtResource("9_7w486")
shooting_point = NodePath("../../weapon_pivot/weapon_sprite/shooting_point")
weapon_pivot = NodePath("../../weapon_pivot")
weapon_sprite = NodePath("../../weapon_pivot/weapon_sprite")
animation_name = "bot_idle"

[connection signal="body_entered" from="bot_follow_range" to="bot_state_machine/wander" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="bot_follow_range" to="bot_state_machine/follow" method="_on_bot_range_body_exited"]
[connection signal="body_entered" from="bot_attack_range" to="bot_state_machine/follow" method="_on_bot_attack_range_body_entered"]
[connection signal="body_shape_exited" from="bot_attack_range" to="bot_state_machine/attack" method="_on_bot_attack_range_body_shape_exited"]
[connection signal="timeout" from="attack_interval" to="bot_state_machine/attack" method="_on_attack_interval_timeout"]
